samples/_failures_safe/1761322388_b278d9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3b56e14e.c: In function ‘main’:
./samples/SAFE/__tmp_3b56e14e.c:160:13: error: expected expression at end of input
  160 |             dfs(&
      |             ^~~
./samples/SAFE/__tmp_3b56e14e.c:160:13: error: too few arguments to function ‘dfs’
./samples/SAFE/__tmp_3b56e14e.c:94:6: note: declared here
   94 | void dfs(struct Graph *g, int start) {
      |      ^~~
./samples/SAFE/__tmp_3b56e14e.c:160:13: error: expected declaration or statement at end of input
  160 |             dfs(&
      |             ^~~
./samples/SAFE/__tmp_3b56e14e.c:160:13: error: expected declaration or statement at end of input
